--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div>Бонус очки:<span id="bonusScores">0</span> </div>
 
    <button id="btnUpgCopperMine" onclick="upgCopperMine()" style="width: 240px;">
-   Улучшить медную шахту, 10 медных монет</button><br>
+   Построить медную шахту, 10 медных монет</button><br>
    <span id="copperCoins">Медные монеты: <span id="spnCoppersValue">0</span><br>
    Скорость заработка медных монет: <span id="spnCoppersRate">1</span> в 0.2 секунды<br></span>
    <button id="btnBuySilver" onclick="buySilver()" style="width: 240px;">Купить 1 серебро за 100 медных</button><br>
@@ -17,7 +17,7 @@
    <hr>
 <p>
   <button id="btnUpgSilverMine" onclick="upgSilverMine()" style="width: 240px;">
-  Построить серебряную шахту, 50 медных монет</button><br>
+  Построить серебряную шахту, 100 медных монет</button><br>
   <span id="silverCoins">Серебряные монеты:<span id="spnSilversValue">0</span><br></span>
   Скорость заработка серебряных монет: <span id="spnSilversRate">0</span> в 0.2 секунды<br></span></p>
   
@@ -27,7 +27,7 @@
   <hr>
 <p>
   <button id="btnUpgGoldMine" onclick="upgGoldMine()" style="width: 240px;">
-  Построить золотую шахту, 50 серебряных монет</button><br>
+  Построить золотую шахту, 100 серебряных монет</button><br>
   <span id="goldCoins">Золотые монеты:<span id="spnGoldsValue">0</span><br></span>
   Скорость заработка золотых монет: <span id="spnGoldsRate">0</span> в 0.2 секунды<br></span></p>
   
