--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
   <button id="btnBuySilver" onclick="sellGold()" style="width: 240px;">Продатьь 1 золото за 100 серебряных</button><br>
   <hr>
   <p>Платиновые монеты: <span id="spnCopperValue">0</span><br></p>
-
-  
-  
+   <hr>
 
   <button id="btnSaveGame" onclick="saveGame()" style="width: 240px;">Сохранить игру</button><br>
+  <button id="btnExportGame" onclick="exportGame()" style="width: 240px;">Экспортировать игру</button><br>
+  <div id="divLblExport" style="display: none"></div>
+  <br>
   <button id="btnLoadGame" onclick="loadGame()" style="width: 240px;">Загрузить игру</button><br>
+  <button id="btnImportGame" onclick="importGame()" style="width: 240px;">Импортировать игру</button><br>
+   <hr>
 </body>
 </html>
